# LLM-embeddings

./: app.py  definitions.py  pyproject.toml
data/: debt-5000-years.epub
data/chunks/: all_chunks.json
data/faiss/: templ.index
llm_embeddings/scripts/: extract_epub.py  faiss_index.py  generate_embeddings.py  preprocess.py
templates/: home.html  search-result.html  search.html
